@@ -30,6 +30,7 @@ dependencies {
     implementation 'io.swagger.core.v3:swagger-models:2.2.21'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'io.github.cdimascio:java-dotenv:5.2.2'
+    implementation 'org.hibernate.validator:hibernate-validator:8.0.1.Final'
 
 
     testImplementation 'org.testcontainers:junit-jupiter'
@@ -48,6 +49,7 @@ dependencies {
 
 tasks.named('test') {
     useJUnitPlatform()
+    jvmArgs += ["-XX:+EnableDynamicAgentLoading"]
     finalizedBy jacocoTestReport
     jacoco {
         includes = ['com.example.*']
